# recsys-seq-model

./: .gitignore  Makefile  README.md  compose.yml  main.py  pyproject.toml
cfg/: common.yaml
notebooks/: 001-features.ipynb  002-negative-sample.ipynb  010-baseline-popular.ipynb  011-sequence-modeling.ipynb  012-two-tower-sequence-modeling.ipynb
src/: cfg.py  dataset.py  id_mapper.py  sample.py  viz.py
src/eval/: __init__.py  compare_runs.py  log_metrics.py  mlflow_utils.py  utils.py
src/sequence/: inference.py  model.py  trainer.py  utils.py
